Atualizações: - Implementação de Log. - Gravação de nr cartao encriptado. - Criação da consulta de cartões por cliente.
